# magic-carpet

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/chatbot_arena/: experiment.ipynb
examples/testing/: example.ipynb
magic_carpet/: __init__.py  carpet_client.py  utils.py
magic_carpet/common/: container.py
magic_carpet/evaluators/: __init__.py  eval_containers.py  evaluator.py
magic_carpet/models/: __init__.py  model.py  model_containers.py
magic_carpet/routers/: __init__.py  cascade_router.py  model_map_router.py  nn_router.py  router.py
