[tool.poetry]
name = "magic-carpet"
version = "0.1.0"
description = "Model router for ML systems"
authors = ["Sidhart Krishnan <sidhartkrishnan@gmail.com>", "Jason Chao <hello@jchao1.com>]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.examples]
optional = true

[tool.poetry.group.examples.dependencies]
ipykernel = "^6.27.1"
numpy = "^1.26.2"
pandas = "^2.1.4"
openai = "^1.6.1"
faiss-cpu = "^1.7.4"
datasets = "^2.16.1"
plotly = "^5.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
